--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Etch-a-Sketch</title>
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
-    <div id="div-container">
-    </div>
+    <div id="div-container"></div>
     <footer class="footer">
         Built by
         <a class="footer" href="https://github.com/scottwright-io"target="_blank">Scott Wright</a> 
     </footer>
-      <script src="script.js"></script>
-    
 </body>
 </html>
