--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
+    <button id="gridButton">New Grid</button>
     <div id="div-container"></div>
     <footer class="footer">
         Built by
