--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
-    <button id="gridButton">New Grid</button>
+    <div id="button-container">
+        <button id="gridButton">New Grid</button>
+        <button id="erase">Erase</button>
+    </div>
+
     <div id="div-container"></div>
     <footer class="footer">
         Built by
